Re-add tower type and fix spacing.

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -125,7 +125,7 @@
 }
 .posSummary
 {
-    margin-left: 60px;
+    margin-left: 70px;
     margin-top: -10px;
 }
 .sigAddFormDiv
